--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@grapevine/ansi": "^1.0.1",
+    "phoenix": "^1.4.10",
+    "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-navigation": "^4.0.6",
-    "react-navigation-stack": "^1.8.0"
+    "react-navigation-stack": "^1.8.0",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "reduxsauce": "^1.1.0",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
